# KFU

./: README.md
Contest-03-10-2023/01/: main.cpp
Contest-2023-09-12/: README.md
Contest-2023-09-12/01/: main.cpp
Contest-2023-09-12/02/: main.go
Contest-2023-09-12/03/: main.cpp
Contest-2023-09-12/08/: main.go
Contest-2023-09-12/09/: main.cpp
Contest-2023-09-12/10/: main.go
Contest-2023-09-12/11/: main.cpp
Contest-2023-09-12/16/: main.go
Contest-2023-09-12/17/: main.cpp
Contest-2023-09-12/18/: main.cpp
Contest-2023-09-12/19/: main.cpp
Contest-2023-09-19/: README.dm  README.md
Contest-2023-09-19/01/: answer.cpp  main.cpp
Contest-2023-09-19/02/: answer.cpp  main.cpp
Contest-2023-09-19/03/: main.cpp
Contest-2023-09-19/04/: main.cpp
Contest-2023-09-19/05/: main.cpp
Contest-2023-09-19/07/: main.cpp
Contest-2023-09-19/09/: main.go
Contest-2023-09-19/10/: main.go
Contest-2023-09-19/12/: answer.go
Contest-2023-10-03/: README.md
Contest-2023-10-03/01/: README.md
Contest-2023-10-03/05/: main.cpp
Contests/Contest-2023-09-12/: README.md
Contests/Contest-2023-09-12/04/: main.go
Contests/Contest-2023-09-12/06/: main.go
Contests/Contest-2023-09-12/07/: main.cpp
Contests/Contest-2023-09-12/12/: main.go
Contests/Contest-2023-09-12/13/: main.cpp
Contests/Contest-2023-09-12/14/: main.go
Contests/Contest-2023-09-12/15/: main.cpp
Contests/Contest-2023-09-12/20/: main.cpp
Contests/Contest-2023-09-19/: README.md
Contests/Contest-2023-09-19/03/: answer.cpp
Contests/Contest-2023-09-19/04/: answer.cpp  main.cpp
Contests/Contest-2023-09-19/06/: answer.cpp  main.cpp
Contests/Contest-2023-09-19/07/: answer.cpp
Contests/Contest-2023-09-19/08/: answer.go  main.go
Contests/Contest-2023-09-19/10/: answer.go
Contests/Contest-2023-09-19/11/: answer.go  main.go
Contests/Contest-2023-09-19/12/: main.go
Contests/Contest-2023-10-03/: README.md
Contests/Contest-2023-10-03/02/: main.cpp
Contests/Contest-2023-10-03/04/: main.cpp
Contests/Contest-2023-10-03/06/: main.cpp
Contests/Contest-2023-10-03/09/: main.go
Contests/Contest-2024-09-11/: README.md
Contests/Contest-2024-09-11/01/: main.cpp
Contests/Contest-2024-09-11/13/: main.cpp
Contests/Contest-2024-09-11/20/: main.cpp
Contests/Contest-2024-09-11/5/: main.cpp
Contests/Contest-2024-09-18/: README.md
Contests/Contest-2024-09-18/01/: bin  main.cpp
Contests/Contest-2024-09-18/02/: bin  main.cpp
Contests/Contest-2024-09-18/03/: bin  main.cpp
Contests/Contest-2024-09-18/04/: bin  main.cpp
Contests/Contest-2024-09-25/: README.md
Contests/Contest-2024-10-02/: README.md  useful-sources.md
Contests/Contest-2024-10-09/: README.md
Contests/Contest-2024-10-16/: README.md
Contests/Contest-2024-10-23/: README.md
SIAOD/: pz-1
SIAOD/pz/: README.md
SiAOD/course1-s2/pz-04/ermit/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
SiAOD/course1-s2/pz-04/lagranj/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
SiAOD/course1-s2/pz-05/ftf/: CMakeLists.txt  dtf.cpp  dtf.h  fft.cpp  fft.h  mainwindow.cpp  mainwindow.h  simpson.cpp  simpson.h
SiAOD/pz-01/: README.md  bin  converter-num-systems.cpp  nums-systems.md
SiAOD/pz-02/: README.md
SiAOD/pz-03/: README.md
Tests/script/: README.md
Tests/test-3-pr1/: README.md
Tests/trial-exam-test-1/: README.md
Tests/trial-test-(add-quests)/: README.md
Tests/trial-test-1/: README.md
Tests/trial-test-2/: README.md
Tests/trial-test-3/: README.md
Tests/trial-test-4/: README.md
Tests/trial-test-5/: README.md
Tests/trial-test-6/: README.md
img/: заготовка для README файлов.txt
(+220 files in other folders)
